Bug #8371 Incorrect results with MEMORY engine, hash indexed column
Submitted: 8 Feb 2005 16:58 Modified: 26 Feb 2005 20:02
Reporter: Dean Ellis
Status: Closed
Category:Server Severity:S1 (Critical)
Version:4.1.10 OS:
Assigned to: Bugs System Target Version:

[8 Feb 2005 16:58] Dean Ellis
Description:
MEMORY engine produces incorrect result set searching against a hash indexed column
(results are correct with btree index).  Per EXPLAIN, join type is always reported as
const.

How to repeat:
CREATE TEMPORARY TABLE t1 ( a INT, INDEX (a) ) ENGINE=MEMORY;
INSERT INTO t1 VALUES (1),(2),(3),(4),(5);
SELECT a FROM t1 WHERE a = 1;
SELECT a FROM t1 WHERE a IN (1,3);
EXPLAIN SELECT a FROM t1 WHERE a IN (1,3);

Suggested fix:
n/a
[8 Feb 2005 22:23] Sergey Petrunya
Fixed in 4.1.10
[26 Feb 2005 20:02] Paul DuBois
Noted in 4.1.10 changelog.