Fix for BUG#8371: wrong rec_per_key value for hash index on temporary table